--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h1>Hello world 2</h1>
+    <h1>Hello Ulimwengu</h1>
+    <h1>Hello world ya pili </h1>
 </body>
 </html>
