umoja wa madevelopa

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Ulimwengu</h1>
-    <h1>Hello world ya pili </h1>
+    <h1>Hello Dunia</h1>
+    <h1>Hello Conflict</h1>
+    <p>I need conflicts</p>
 </body>
 </html>
