--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello Conflict</h1>
-    <p>I need conflicts</p>
+    <p>I need violence to solve!!!!!!!</p>
 </body>
 </html>
